Fixed title spacing on Mac Chrome

--- a/src/components/CardBody.css
+++ b/src/components/CardBody.css
@@ -23,7 +23,7 @@
 .card__title {
   color: white;
   margin: 0;
-  height: 3rem;
+  height: 47px;
   text-align: center;
   /* border-left: 0.01rem solid white;
   border-bottom: 0.01rem solid white;
